--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,11 @@
 # database init, supports mysql too
 database=mysql
+
+#spring.datasource.url=jdbc:mysql://petclinic.ctXXXXXadk92.us-west-2.rds.amazonaws.com/petclinic
+
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/petclinic}
 spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASS:petclinic}
+
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
